[package]
name = "mr-mountain-man-github-io"
version = "0.1.0"
authors = ["JamesDickson <jamesdickson2048@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-logger = "0.7.2"
dioxus-static-site-generation = "0.6.0-alpha.4"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
