[package]
name = "mr-mountain-man-github-io"
version = "0.1.0"
authors = ["JamesDickson <jamesdickson2048@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "asset", "fullstack"] }
dioxus-logger = "0.7.3"
dioxus-asset-resolver = "0.7.3"
regex = "1.11.3"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = {version = "1.0.221", features = ["derive"] }
serde_json = "1.0.145"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
